# neat-lib

./: .gitignore  CMakeLists.txt  README.md  cartpole_viz.html  pendulum_viz.html  platformer_viz.html
benchmarks/: CMakeLists.txt  benchmark_population.cpp  benchmark_utils.hpp
benchmarks/scripts/: run_all.sh
benchmarks/scripts/cartpole/: run_cartpole.sh
benchmarks/scripts/double_pendulum/: run_double_pendulum.sh
benchmarks/scripts/platformer/: run_platformer.sh
benchmarks/scripts/snake/: run_snake.sh
envs/cartpole/: CMakeLists.txt  cartpole.hpp  main.cpp
envs/pendulum/: double_pendulum.hpp  main.cpp
envs/platformer/: CMakeLists.txt  main.cpp  platformer.hpp
envs/snake/: main.cpp  snake_game.hpp
include/neat/: cli.hpp  config.hpp  csv_export.hpp  genome.hpp  innovation.hpp  neat.hpp  network.hpp  population.hpp  random.hpp
scripts/: compute_perf.py  convergence_analysis.py  mann_whitney.py  plot_convergence.py  run_stats.py
src/: cli.cpp  config.cpp  csv_export.cpp  genome.cpp  innovation.cpp  network.cpp  population.cpp  random.cpp  tmp
tests/: CMakeLists.txt  test_config.cpp  test_genome.cpp  test_innovation.cpp  test_network.cpp  test_population.cpp  test_random.cpp
